--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/login.css">
+    <title>Welcome Shopper</title>
 </head>
 <body>
     <% if (locals.messages.errors) { %>
@@ -17,10 +18,22 @@
             <div class="alert alert-danger"><%= el.msg %></div>
         <% }) %>    
     <% } %>
+    <h1> Welcome Back Shopper </h1>
+<main>
     <form action="/login" method="POST">
+        <label> Email </label>
         <input type="email" name="email" placeholder="Email">
+        <label> Password </label>
         <input type="password" name="password" placeholder="Password">
-        <input type="submit">
+        <label> Confirm Password </label>
+        <input type="password" name="confirm" placeholder="Confirm Password">
+        <div id="remember">
+            <a href = '/forgot'> Forgot Password </a>
+        </div>
+        <input type="submit" value="Sign In" id="submit">
     </form>
+    <div> 
+        <h4> New Shopper? <a href="/signup.ejs"> Sign Up </a>
+</main>
 </body>
 </html>
