--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -9,15 +9,34 @@
 </head>
 <body>
     <h1>Todos</h1>
+
+    <div class="personal">
+        <h2>Personal tasks</h2>
     <ul>
     <% todos.forEach( el => { %>
             <li class='todoItem' data-id='<%=el._id%>'>
                 <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.todo %></span>
+                <span class ='<%= el.shared === true ? 'unshared' : 'share'%>'>Share</span>
                 <span class='del'> Delete </span>
+                
             </li>
     <% }) %>    
     </ul>
+    </div>
 
+    <div class ="invited">
+        <h2>Shared Tasks</h2>
+    <ul>
+        <% todos.forEach( el => { %>
+            <% if (el.shared ===true){ %>
+                <li class='todoItem' data-id='<%=el._id%>'>
+                    <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.todo %></span>
+                    <span class='del'> Delete </span>
+                </li>
+        <% }}) %>    
+        </ul>
+    </div> 
+    <div class="form">   
     <h2><%= user.userName %> has <%= left %> things left to do.</h2>
 
     <form action="/todos/createTodo" method='POST'>
@@ -25,16 +44,8 @@
         <input type="submit">
     </form>
 
-    <p>Invite others to access your list with your key: <%= user._id %></p>
-
-    <form action="/todos/collab" method='POST'>
-        <p>To collab on someone's list enter their key</p>
-        <input type="text" placeholder="Enter Key to " name='collabKey'>
-        <input type="submit">
-    </form>
-
     <a href="/logout">Logout</a>
-
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
