--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,26 @@
-h1 {
+h1{
   color: red;
 }
-.completed {
+.completed{
   text-decoration: line-through;
   color: gray;
 }
-.not {
+.not{
   text-decoration: underline;
+}
+.personal{
+  float: left;
+  border: 3px solid red;
+  margin-right:30px;
+  padding:10px;
+}
+
+.invited{
+  float:left;
+  border: 3px solid green;
+  padding:10px;
+}
+.form{
+  position:absolute;
+  top:30%;
 }
