Revert "Merge pull request #7 from zainbazaz/main"
This reverts commit 96119cdc8905e0e77aba2da1ea895136e8fe5e90, reversing
changes made to 962d10dbe0e9f8a19b44c56fd0b4da27efdccccf.

--- a/views/collab.ejs
+++ b/views/collab.ejs
@@ -19,10 +19,9 @@
     </ul>
 
     <h2><%= user.userName %> and <%= collabUser %> Have <%= left %> things left to do.</h2>
-    
-    <form action="/todos/createTodoCollab" method='POST' >
+
+    <form action="/todos/createTodo" method='POST'>
         <input type="text" placeholder="Enter Todo Item" name='todoItem'>
-        <input type="hidden" name='key' value="<%= key %>">
         <input type="submit">
     </form>
 
