--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,8 @@
         <input type="email" name="email" placeholder="Email">
         <label> Password </label>
         <input type="password" name="password" placeholder="Password">
-        
+        <label> Confirm Password </label>
+        <input type="password" name="confirm" placeholder="Confirm Password">
         <div id="remember">
             <a href = '/forgot'> Forgot Password </a>
         </div>
