--- a/views/login.ejs
+++ b/views/login.ejs
@@ -33,7 +33,7 @@
         <input type="submit" value="Sign In" id="submit">
     </form>
     <div> 
-        <h4> New Shopper? <a href="/signup.ejs"> Sign Up </a>
+        <h4> New Shopper? <a href="/signup"> Sign Up </a>
 </main>
 </body>
 </html>
