--- a/views/groupTodos.ejs
+++ b/views/groupTodos.ejs
@@ -14,26 +14,39 @@
 
         <h1><a href=<%=`/todos/addUser/${group[0]._id}` %> >add user to the group</a></h1>
 
-        <h3>
+        <!-- <h3>
             Group Todos: <%= groupTodos %>
         </h3>
         <h3>
-
             Group: <%= group %>
         </h3>
-        <h3>
 
+        <h3>
             User: <%= user %>
-        </h3>
+        </h3> -->
+
+
+
 
         <form action=<%=`/todos/createTodo/${group[0]._id}`%> method='POST'>
             <input type=" text" placeholder="Enter Todo Item" name='todoItem'>
             <input type="submit">
         </form>
 
-        <a href="/logout">Logout</a>
 
-        <script src="js/main.js"></script>
+        <% groupTodos.forEach(el=> { %>
+            <br>
+            <li data-id='<%=el._id%>'>
+                <%= el.todo %>
+            </li>
+            <!-- <br> -->
+
+            <% }) %>
+
+
+                <a href="/logout">Logout</a>
+
+                <script src="js/main.js"></script>
     </body>
 
 </html>
