--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/home.css">
+    <title>Welcome --Shoppers United</title>
 </head>
 <body>
-    <h1>Create Your VERY OWN Todolist!</h1>
-    <a href="/login"> Login</a>
-    <a href="/signup"> Signup</a>
+    <h1>Welcome to Shoppers United</h1>
+    <main class="container">
+    <section class="container__left"> 
+        <h2> Let's make a list; <br> Together </h2>
+        <div class="left__wrapper">
+            <a href="/login"> Login</a>
+            <a href="/signup"> Sign Up</a>
+        </div>
+    </section>
+</main>
+<h5>Photo by <a href="https://unsplash.com/@cathrynlavery?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"> Cathryn Lavery </a> on <a href="https://unsplash.com/s/photos/list?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"> Unsplash </a></h5>
+  
 </body>
 </html>
