--- a/public/css/login.css
+++ b/public/css/login.css
@@ -4,34 +4,80 @@
     padding: 0;
 }
 body{
-    text-align: center;
-    background-color: rgb(239, 239, 239);
+    background-image: url('../images/bluelogo.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 40%;
 }
 h1{
-    margin-top: 2rem;
-    font-size: 3rem;
+    margin-top: 1rem;
+    font-size: 2.5rem;
+    color: white;
 }
 main{
-    border: 0.3rem solid black;
-    width: 50%;
+    border: 0.3rem solid rgb(199, 197, 197);
+    border-radius: 0.3rem;
+    width: 60%;
     margin: 1rem auto;
-    height: 100%;
+    height: 60vh;
+}
+label:first-child{
+    margin-top: 6rem;
 }
 label,input{
     display: flex;
     flex-direction: column;
     margin:0.3rem auto;
+    margin-top: 1rem;
+    align-content: center;
+
 }
+label::placeholder,
+input::placeholder{
+    text-align: center;
+    font-size: 1.3rem;
+    margin: 1rem auto;
+}
+label{
+    font-size: 2rem;
+}
+input{
+    font-size: 1.3rem;
+    outline: none;
+    border: none;
+    border-bottom: 0.2rem solid black;
+    width: 70%;
+}
+input:focus{
+    border-bottom:#EA8F07 0.2rem solid;
+}
+
 #submit{
-    background-color:#5498FD;
+    background-color:#EA8F07;
     color: white;
     padding: 0.5rem 1.5rem 0.5rem 1.5rem;
     border-radius: 0.5rem;
-    text-align: center;
     box-shadow: 0 0.2rem rgba(0, 0, 0, 0.192);
+    font-size: 1.3rem;
+    margin: 1rem auto;
+    width: 50%;
+    padding-left: 6rem;
 }
+
 #submit:hover{
     cursor:pointer;
-    background-color:#235bb1;
+    background-color:#ca7b04;
     transition: ease all 0.3s;
+}
+h4{
+    font-size: 1.3rem;
+}
+.text{
+    margin: 1.5rem auto;
+    text-decoration: none;
+}
+ a {
+    color:#EA8F07;
+    text-decoration: none;
+    font-weight: 600;
 }
