--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ERROR</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Forgot Password</title>
 </head>
 <body>
-<h1>Server Error</h1>
-<p>We're sorry, something went wrong</p>
-<a href ="/" class="btn">Go back</a>
-<script src="js/main.js"></script>
+    
 </body>
 </html>
