check notes, added some authJS at the bottom, made forgot.ejs, changed some routes

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,12 +28,12 @@
         <label> Confirm Password </label>
         <input type="password" name="confirm" placeholder="Confirm Password">
         <div id="remember">
-            <a href = '/forgot'> Forgot Password </a>
+            <a href = '/forgotPassword'> Forgot Password </a>
         </div>
         <input type="submit" value="Sign In" id="submit">
     </form>
     <div> 
-        <h4> New Shopper? <a href="/signup.ejs"> Sign Up </a>
+        <h4> New Shopper? <a href="/signup"> Sign Up </a>
 </main>
 </body>
 </html>
