routing for forgot password page

--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgot Password</title>
+    <title>Forgot Password --Shoppers United</title>
 </head>
 <body>
-    
+    <h1> Forgot Password </h1>
+    <!--Deja's tested version of the password reset form -->
+    <form action="" method="POST">
+        <label> Email </label>
+        <input type="email" placeholder="Enter Email"/>
+        <input type="submit" value="submit" />
+    </form>
+    <!-- <form action="/resetPassword" method="POST">
+        <input type="password" name="newPassword" placeholder="New Password">
+        <input type="password" name="oldPassword" placeholder="Old Password">
+        <input type="password" name="confirmPassword" placeholder="Confirm Password">
+        <input type="submit" value="confirmChangePassword" id="confirmedChangePassword">
+    </form>
+     -->
 </body>
 </html>
