--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/todo.css">
     <title>Lists --Shoppers United</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
