--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -11,7 +11,7 @@
     <!--Deja's tested version of the password reset form -->
     <form action="" method="POST">
         <label> Email </label>
-        <input type="email" placeholder="Enter Email"/>
+        <input type="email" name="email" id="email" placeholder="Enter Email"/>
         <input type="submit" value="submit" />
     </form>
 <!--MC fucked THIS up?
