things to make stuff pretty

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,25 +1,1 @@
-h1{
-  color: red;
-}
-.completed{
-  text-decoration: line-through;
-  color: gray;
-}
-.not{
-  text-decoration: underline;
-}
-.personal{
-  float: left;
-  border: 3px solid red;
-  margin-right:30px;
-  padding:10px;
-}
-
-.invited{
-  float:left;
-  border: 3px solid green;
-  padding:10px;
-}
-.form{
-  position:absolute;
-  top:30%;
+;
