Changed file naming, deleted extra controllers, renamed new controller

--- a/views/forgotPassword.ejs
+++ b/views/forgotPassword.ejs
@@ -4,24 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Forgot Password --Shoppers United</title>
+    <title>Forgot Password Page</title>
 </head>
 <body>
-    <h1> Forgot Password </h1>
-    <!--Deja's tested version of the password reset form -->
-    <form action="" method="POST">
-        <label> Email </label>
-        <input type="email" name="email" id="email" placeholder="Enter Email"/>
-        <input type="submit" value="submit" />
-    </form>
-<!--MC fucked THIS up?
+<h1>Forgot your password?</h1>
+
+<!-- MC-->
     <form action="/resetPassword" method="POST">
+        <label>Email</label>
+        <input type ="email" name="email" id="email" placeholder="Enter Email Address">
+        <label>New Password</label>
         <input type="password" name="newPassword" placeholder="New Password">
-        <input type="password" name="oldPassword" placeholder="Old Password">
+        <label>Confirm Password</label>
         <input type="password" name="confirmPassword" placeholder="Confirm Password">
         <input type="submit" value="confirmChangePassword" id="confirmedChangePassword">
     </form>
- MC fucked THIS up? -->
+<!-- MC -->
+
+<!-- <form action="" method="POST">
+    <label> Email </label>
+    <input type="email" name="email" id="email" placeholder="Enter Email"/>
+    <input type="submit" value="submit" />
+</form> -->
+
 
 </body>
 </html>
