--- a/views/forgotPassword.ejs
+++ b/views/forgotPassword.ejs
@@ -19,6 +19,8 @@
         <input type="password" name="confirmPassword" placeholder="Confirm Password">
         <input type="submit" value="confirmChangePassword" id="confirmedChangePassword">
     </form>
+
+    <!-- TEST -->
 <!-- MC -->
 
 <!-- <form action="" method="POST">
