--- a/views/collab.ejs
+++ b/views/collab.ejs
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>collab</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <h1>Todos shared</h1>
-    <a href="/todos">Go to home</a>
-    <ul>
-    <% todos.forEach( el => { %>
-            <% if (el.shared ===true){ %>
-                <li class='todoItem' data-id='<%=el._id%>'>
-                    <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.todo %></span>
-                    <span class='del'> Delete </span>
-                </li>
-        <% }}) %>    
-    </ul>
 
-    <h2><%= user.userName %> and <%= collabUser %> Have <%= left %> things left to do.</h2>
-    
-    <form action="/todos/createTodoCollab" method='POST' >
-        <input type="text" placeholder="Enter Todo Item" name='todoItem'>
-        <input type="hidden" name='key' value="<%= key %>">
-        <input type="submit">
-    </form>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>collab</title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
 
-   
+    <body>
+        <h1>Todos shared</h1>
+        <a href="/groups">Go to home</a>
+        <ul>
+            <% todos.forEach( el=> { %>
+                <% if (el.shared===true){ %>
+                    <li class='todoItem' data-id='<%=el._id%>'>
+                        <span class='<%= el.completed === true ? ' completed' : 'not' %>'><%= el.todo %></span>
+                        <span class='del'> Delete </span>
+                    </li>
+                    <% }}) %>
+        </ul>
 
-    <a href="/logout">Logout</a>
+        <h2>
+            <%= user.userName %> and <%= collabUser %> Have <%= left %> things left to do.
+        </h2>
 
-    <script src="js/main.js"></script>
-</body>
+        <form action="/groups/createTodoCollab" method='POST'>
+            <input type="text" placeholder="Enter Todo Item" name='todoItem'>
+            <input type="hidden" name='key' value="<%= key %>">
+            <input type="submit">
+        </form>
+
+
+
+        <a href="/logout">Logout</a>
+
+        <script src="js/main.js"></script>
+    </body>
+
 </html>
