--- a/views/groups.ejs
+++ b/views/groups.ejs
@@ -14,10 +14,10 @@
         <ul class="card__ul">
             <% if (groups.length===0) { %>
                 <h3>No groups yet</h3>
-                <a href="/todos/createGroup">Create group</a>
+                <a href="/groups/createGroup">Create group</a>
                 <% } else { %>
                     <% groups.forEach( el=> { %>
-                        <a href=<%=`/todos/${el._id}`%>>
+                        <a href=<%=`/groups/${el._id}`%>>
                             <li class="card" data-id='<%=el._id%>'>
                                 <div class="">
                                     <p class="card__title"><span>
