--- a/public/css/login.css
+++ b/public/css/login.css
@@ -4,11 +4,12 @@
     padding: 0;
 }
 body{
-    background-image: url('../images/bluelogo.png');
-    background-repeat: no-repeat;
+    height: 100vh;
+    background-image: url('../images/homepage.jpeg');
     background-size: cover;
-    background-position: 50% 40%;
+    background-position: center;
     text-align: center;
+    overflow: hidden;
 }
 h1{
     margin-top: 1rem;
@@ -55,6 +56,7 @@ input{
     border-bottom: 0.2rem solid white;
     background-color: transparent;
     width: 70%;
+    color:white;
 }
 input:focus{
     border-bottom:#EA8F07 0.2rem solid;
@@ -70,12 +72,15 @@ input:focus{
     margin: 1rem auto;
     width: 30%;
     padding-left: 5.5rem;
+    border-bottom:#EA8F07 0.2rem solid;
 }
 
 #submit:hover{
     cursor:pointer;
     background-color:#ca7b04;
     transition: ease all 0.3s;
+    color: black;
+    border-bottom:#EA8F07 0.2rem solid;
 }
 h4{
     font-size: 1.3rem;
