--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -4,11 +4,12 @@
     padding: 0;
 }
 body{
-    background-image: url('../images/bluelogo.png');
-    background-repeat: no-repeat;
+    height: 100vh;
+    background-image: url('../images/homepage.jpeg');
     background-size: cover;
-    background-position: 50% 40%;
+    background-position: center;
     text-align: center;
+    overflow: hidden;
 }
 h1{
     margin-top: 1rem;
