Please delete thankyou

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
         <label> Password </label>
         <input type="password" name="password" placeholder="Enter Password">
         <div id="remember">
-            <a href = '/forgotPassword'> Forgot Password </a>
+            <button id="forgotPasswordPrompt"> Forgot Password</button>
         </div>
         <input type="submit" value="Sign In" id="submit">
     <div class="text"> 
