--- a/public/css/todo.css
+++ b/public/css/todo.css
@@ -75,6 +75,16 @@ header > h1{
       font-size: 1rem;
       cursor: pointer;
   }
+  .repeat{
+      color: white;
+      border: 0.2rem solid #e1610c;
+      padding: 0.2rem 0.6rem 0.2rem 0.6rem;
+      background-color: #e1610c;
+      border-radius: 0.3rem;
+      margin-left: 0.5rem;
+      font-size: 1rem;
+      cursor: pointer;
+  }
     .del,
     .share{
         color: white;
