--- a/public/css/todo.css
+++ b/public/css/todo.css
@@ -118,3 +118,89 @@ header > h1{
   .not{
     text-decoration: none;
   }
+
+
+  /* group settings */
+    /* dd container */
+    .menu-container{
+      display: flex;
+      justify-content: left;
+    }
+    .dropdown {
+      display: inline-block;
+      position: relative;
+      outline: none;
+      margin: 10px;
+    }
+  
+    /* button */
+    .dropbtn {
+      padding: 12px 16px;
+      color: white;
+      background-color: #336bee;
+      cursor: pointer;
+      transition: 0.35s ease-out;
+    }
+  
+    /* dd content */
+    .dropdown .dropdown-content {
+      position: absolute;
+      top: 50%;
+      background-color: #f7f7f7;
+      min-width: 250%;
+      box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+      z-index: 100000;
+      visibility: hidden;
+      opacity: 0;
+      transition: 0.35s ease-out;
+    }
+  
+    .dropdown-content a {
+      color: black;
+      padding: 12px 16px;
+      display: block;
+      text-decoration: none;
+      transition: 0.35s ease-out;
+    }
+  
+    .dropdown-content a:hover {
+      background-color: #eaeaea;
+    }
+  
+    /* show dd content */
+    .dropdown:focus .dropdown-content {
+      outline: none;
+      transform: translateY(20px);
+      visibility: visible;
+      opacity: 1;
+    }
+  
+    .dropbtn:hover,
+    .dropdown:focus .dropbtn {
+      background-color: #164a92;
+    }
+  
+    /* mask to close menu by clicking on the button */
+    .dropdown .db2 {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      opacity: 0;
+      cursor: pointer;
+      z-index: 10;
+      display: none;
+    }
+  
+    .dropdown:focus .db2 {
+      display: inline-block;
+    }
+  
+    .dropdown .db2:focus .dropdown-content {
+      outline: none;
+      visibility: hidden;
+      opacity: 0;
+    }
+  /* group settings */
+
