Power went out sorry

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,8 +31,9 @@
             <a href = '/forgotPassword'> Forgot Password </a>
         </div>
         <input type="submit" value="Sign In" id="submit">
-    <div class="text"> 
+    <div class="text"></div></form>
         <h4> New Shopper? <a href="/signup"> Sign Up </a>
+            <span><button id="forgotPasswordButton">Forgot Password</button></span>
 </main>
 </body>
 </html>
