--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,11 +28,14 @@
         <label> Password </label>
         <input type="password" name="password" placeholder="Enter Password">
         <div id="remember">
-            <a href = '/forgotPassword'> Forgot Password </a>
+            <button id="forgotPwdBtn"> Forgot Password </button>
         </div>
         <input type="submit" value="Sign In" id="submit">
+    </form>
     <div class="text"> 
-        <h4> New Shopper? <a href="/signup"> Sign Up </a>
+        <h4> New Shopper? <a href="/signup"> Sign Up </a></h4>
+    </div>
 </main>
+<script src ='/js/main.js'></script>
 </body>
 </html>
