--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -88,3 +88,8 @@ input:focus{
     top: -3rem;
     margin-right: -10rem;
 }
+/* notifications for alert messages */
+.alert {
+    color: white;
+    font-size: 1.5rem;
+}
