quick change to server

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,10 +23,10 @@
     <h1> Welcome Back Shopper </h1>
     <form action="/login" method="POST" autocomplete="off">
         <label> Email </label>
-        <input type="email" name="email" placeholder="Enter Email"
+        <input type="email" name="email" 
         >
         <label> Password </label>
-        <input type="password" name="password" placeholder="Enter Password">
+        <input type="password" name="password" >
         <div id="remember">
             <button id="forgotPwdBtn"> Forgot Password </button>
         </div>
